[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "seller-central-reply-backend"
version = "0.1.0"
description = "Seller Central 买家消息 AI 回复助手后端：草稿生成 + 政策护栏 + 分类 + 上下文丰富 + 学习库"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]
[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
